# coeffinance

./: .env.example  .gitignore  Dockerfile  alembic.ini  compose.yml  pyproject.toml
src/: main.py
src/analytics/: routes.py  schemas.py
src/analytics/db/: models.py
src/companies/: deps.py  routes.py  schemas.py  service.py
src/companies/db/: daos.py  models.py
src/core/: asgi.py  errors.py  external_api.py  middlewares.py  models.py  routers.py  schemas.py  settings.py
src/core/db/: models.py  sessions.py
src/core/db/migrator/: env.py  script.py.mako
src/core/db/migrator/versions/: 05d7f15f0abd_initial_revision.py  0c93832207a3_change_float_to_decimal_for_accurancy.py  16966422abaf_apply_min_len_naming_constraints.py  58f3e0bd6fa6_create_tables_for_companies_and_.py  810c78f8f000_apply_naming_convention.py  cee77640d44a_correct_ratios_table_fk_ref_from_.py  deefe523fe2b_create_users_table.py
src/core/errors/: exceptions.py  handlers.py
src/core/migrator/: env.py
src/core/migrator/versions/: 05d7f15f0abd_initial_revision.py  810c78f8f000_apply_naming_convention.py  deefe523fe2b_create_users_table.py
src/core/utils/: db_managers.py  email_clients.py  http_clients.py  loggers.py  mail.py  openapi.py  paginators.py
src/users/: deps.py  errors.py  models.py  routes.py  schemas.py  service.py
src/users/db/: models.py
src/users/utils/: password_validators.py  utils.py
tests/: conftest.py  deps.py  factories.py
tests/test_analytics/: factories.py
tests/test_companies/: conftest.py  deps.py  factories.py
tests/test_companies/test_cases/: test_daos.py  test_routes.py
tests/test_users/: factories.py
